2004-12-17  Not Zed  <NotZed@Ximian.com>

	* e-error.c (ee_load, e_error_newv): translate strings based on
	translation-domain, if supplied.

2004-12-14  Rodney Dawes  <dobey@novell.com>

	* e-calendar-item.c (e_calendar_item_draw): Use gtk_paint_foo instead
	of the deprecated gtk_draw_foo functions
	(e_calendar_item_get_day_style): Use colors from the theme for the
	background and foreground of various items
	
	* test-calendar.c (main): Don't set a callback for getting the day
	style, we want the test app to use the widget defaults
	(get_day_style): Remove all this duplicated code as we want to use
	the widget default colors for day fg/bg

2004-11-26  JP Rosevear  <jpr@novell.com>

	* test-info-label.c: test prog

	* e-url-entry.c: get image directly from icon factory

	* e-combo-button.c: ditto; convert to G_DEFINE_TYPE

	* e-activity-handler.c: convert to G_DEFINE_TYPE
	
	* e-task-widget.c: ditto

	* e-task-bar.c: ditto

	* e-multi-config-dialog.c: ditto

	* e-dropdown-button.c: ditto

	* e-cell-renderer-combo.c: ditto

	* e-cell-date-edit.c: ditto

	* e-calendar.c: ditto

	* e-calendar-item.c: ditto

	* Makefile.am: don't build the title bar, build an info label test
	program

2004-10-28  Li Yuan  <li.yuan@sun.com>

	* e-calendar.c: (e_calendar_init), (e_calendar_new): Make
	accessibility name and description translatable.  Add a atk name
	for the two buttons so that they can be UI grabbed by GOK.
	
	* e-dateedit.c: (e_date_edit_new), (create_children): Add a name
	for atk object.  Make accessibility name and description
	translatable.  Add name and description for the date_entry,
	date_button and time_combo.
	(e_date_edit_show_date_popup), (hide_date_popup): Grab and ungrab
	keyboard.  add_relation(): New function to add labelled_by
	relation for entry and combobox.
	
	* e-map.c: (e_map_new): Add a name for world map widget.  Make
	accessibility name and description translatable.  Set the atk role
	to image.
	